Increase readibility: top-box is now top-row, bottom-box is now bottom-row

--- a/styles/display-page.css
+++ b/styles/display-page.css
@@ -8,14 +8,14 @@
   font-size: 0;
 }
 
-.top-box {
+.top-row {
   width: 50%;
   height: 200px;
   border: 1px solid black;
   display: inline-block;
 }
 
-.bottom-box {
+.bottom-row {
   width: 33.33%;
   height: 300px;
   border: 1px solid black;
